# agblogger

./: .env.example  .gitignore  .gitleaks.toml  .importlinter  .snyk  .trivyignore  AGENTS.md  Caddyfile  Caddyfile.local  Caddyfile.production  DEPLOYMENT.md  Dockerfile  README.md  alembic.ini  docker-compose.caddy-local.yml  docker-compose.yml  docker-entrypoint.sh  justfile  pyproject.toml
.github/workflows/: release-cli.yml
backend/: AGENTS.md  __main__.py  config.py  database.py  exceptions.py  main.py  net_utils.py  sync_paths.py  validation.py  version.py
backend/api/: admin.py  analytics.py  auth.py  content.py  crosspost.py  deps.py  health.py  labels.py  pages.py  posts.py  render.py  sync.py
backend/crosspost/: atproto_oauth.py  bluesky.py  bluesky_oauth_state.py  facebook.py  http_utils.py  mastodon.py  x.py
backend/filesystem/: content_manager.py  frontmatter.py  toml_manager.py
backend/migrations/: env.py  script.py.mako
backend/models/: __init__.py  analytics.py  base.py  crosspost.py  label.py  page.py  post.py  sync.py  user.py
backend/pandoc/: renderer.py  server.py
backend/schemas/: admin.py  (+5 more)
cli/: __init__.py  deploy_production.py  dev_server.py  local_caddy.py  mutation_backend.py  release.py  sync_client.py  version.py  zap_hooks.py  zap_scan.py
frontend/: .dependency-cruiser.cjs  AGENTS.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts  vitePostProxy.ts
goatcounter/: entrypoint.sh
packaging/server/: pyproject.toml
tests/: AGENTS.md  conftest.py  test_server_entry.py  test_slug_utils.py
(+506 files in other folders)
