[project]
name = "agblogger-server"
version = "0.1.1"
description = "Server runtime package for AgBlogger"
requires-python = ">=3.14"
license = "MIT"
authors = [{ name = "Lukasz Czajka" }]
dependencies = [
    "fastapi>=0.115",
    "starlette>=0.46",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.21",
    "alembic>=1.15",
    "pyyaml>=6.0",
    "python-frontmatter>=1.1",
    "tomli-w>=1.1",
    "pyjwt>=2.12",
    "cryptography>=45.0",
    "bcrypt>=4.0",
    "pydantic[email]>=2.10",
    "pydantic-settings>=2.7",
    "pendulum>=3.0",
    "httpx>=0.28",
    "httpcore>=1.0,<2",
    "crawlerdetect>=0.3",
    "python-multipart>=0.0.20",
    "grapheme>=0.6.0",
]

[project.scripts]
agblogger-server = "backend.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
